Fix #144 top nav bar offseting from top when nav is collapsed.

--- a/web/assets/client/index.styl
+++ b/web/assets/client/index.styl
@@ -11,6 +11,11 @@
 body
     position relative
     padding-top 50px
+    padding-top: 60px
+
+@media (max-width: 979px)
+    body
+        padding-top 0px
 
 footer {
     text-align: center;
